--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -24,6 +24,16 @@ eureka:
     service-url:
       defaultZone: http://peer1:8761/eureka/
 
+---
+server:
+  port: 8771
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:${server.port}/eureka/
+
 
 #server:
 #  port: 8761
